--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "@types/node": "^16.18.37",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "error": "10.4.0",
+    "next": "13.4.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "next dev",
+    "start-production": "next start",
+    "build": "next build",
+    "test": "jest test"
   },
   "eslintConfig": {
     "extends": [
